2008/05/02
	39. Replaced shared pointer to CkwsRoadmapBuilder by weak pointer in 
	    class CkwsGraphicRoadmapDelegate. 
	    Shared pointer loops imply that some objects are never deleted. 
	    However, a memory leak is remaining. Currently, CkwsGraphicRoadmapDelegate
	    objects are not deleted.
	
2008/05/01
	38. Changed the way graphic roadmaps are handled :
	    creation of graphic roadmap is triggered from ChppPlanner through a notification.
	    CkppInterface subscribes to the notification and builds a graphic roadmap.
	37. Renamed some attributes and method parameter in order to homogeneize the style.
	
2008/04/18
	36. Set default penetration to 0.02. Can be changed by compilation 
	    macro. 
	35. Correction of a bug in planner panel: if no roadmap builder 
	    was selected, and delegate was selected, kpp crashed.
	34. Defined enum in class CkppPlannerPanel in order to deal 
	    with arrays (roadmapbuilders, shooters, ...);
	
2008/04/17
	33. If CXXFLAGS and CFLAGS are not defined at configuration, they are set to "-Wall".
	
2008/04/07

	32. Adaptation to KPP version 2.04.500.
	
        31. Simplify CkppInterface::hppSetObstacleList
	
kppInterface 1.2 released February 19, 2008

	30. Avoid duplication of devices when adding a problem.
	29. Added LT roadmap builder and SLERP steering method
	    (undocumented kineoworks class) in the panel. 
	28. Adding documentation for using the panel in kppInterface.
	27. Added PCA roadmap builder in the configuration panel
	26. Added selections for kwsPlus steering methods.
	25. Adding problems via the configuration Panel.
	24. Added a panel for configuring planners.
	23. Added a default delegate for roadmaps graphical display.
	22. Link with KineoPathPlanner.pc flags instead of
	    KineoController.pc flags.
	21. Added output when menu is created.
	20. In KwsGraphicRoadmap, nodes are now displayed by a cube.
	19. Modification of KwsGraphicRoadmap to allow drawing of each